# muon_propagator

./: CMakeLists.txt  README.md  antimuon_propagator.cpp  muon_propagator.cpp  testfile.txt  testfile_propagated.txt
resources/: config_minimal_rock.json  config_muon_rock.json
